; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_ialloc.c_mark_bitmap_end.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_ialloc.c_mark_bitmap_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"mark end bits +%d through +%d used\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mark_bitmap_end(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %47

12:                                               ; preds = %3
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @ext4_debug(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %29, %12
  %18 = load i32, i32* %7, align 4
  %19 = sext i32 %18 to i64
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 %20, 7
  %22 = sext i32 %21 to i64
  %23 = and i64 %22, -8
  %24 = icmp ult i64 %19, %23
  br i1 %24, label %25, label %32

25:                                               ; preds = %17
  %26 = load i32, i32* %7, align 4
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @ext4_set_bit(i32 %26, i8* %27)
  br label %29

29:                                               ; preds = %25
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  br label %17

32:                                               ; preds = %17
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %5, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %47

36:                                               ; preds = %32
  %37 = load i8*, i8** %6, align 8
  %38 = load i32, i32* %7, align 4
  %39 = ashr i32 %38, 3
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i8, i8* %37, i64 %40
  %42 = load i32, i32* %5, align 4
  %43 = load i32, i32* %7, align 4
  %44 = sub nsw i32 %42, %43
  %45 = ashr i32 %44, 3
  %46 = call i32 @memset(i8* %41, i32 255, i32 %45)
  br label %47

47:                                               ; preds = %11, %36, %32
  ret void
}

declare dso_local i32 @ext4_debug(i8*, i32, i32) #1

declare dso_local i32 @ext4_set_bit(i32, i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
